Alterando o link do meu git hub
alteração do link do meu git hub

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="linkedin.png">
                     Linkedin 
                 </a><!-- cria-se uma hiperligação nas páginas web, arquivos, endereços de emails, links na mesma página ou endereços na URL-->
-                <a class="apresentacao_button" href="https://github.com/MikaelSouzafr"> 
+                <a class="apresentacao_button" href="https://github.com/mikael-souza"> 
                     <img src="github.png">
                     GitHub 
                 </a>
