--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             <div class="apresentacao_links"> <!-- tag para ser usado para agrupar elementos para fins de estilos (class ou id)-->
                 <h2 class="apresentacao_subtitulo"> Acesse minhas redes: </h2>
                 <a  class="apresentacao_button" href="https://www.linkedin.com/in/mikael-ferreira-37471b232/"> 
-                    <img src="linkedin.png">
+                    <img src="img/linkedin.png">
                     Linkedin 
                 </a><!-- cria-se uma hiperligação nas páginas web, arquivos, endereços de emails, links na mesma página ou endereços na URL-->
                 <a class="apresentacao_button" href="https://github.com/mikael-souza"> 
-                    <img src="github.png">
+                    <img src="img/github.png">
                     GitHub 
                 </a>
             </div>
         </section>
-        <img class="img_mikael" src="Mikael.jpg" alt="Foto do Mikael Ferreira">
+        <img class="img_mikael" src="img/Mikael.jpg" alt="Foto do Mikael Ferreira">
     </main>
 </body>
         <footer class="rodape"> 
