Alterando a imagem do about

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <P class="apresentacao_texto">É um grande fã do mundo open-source, desde então, migrando para área de programação. Atualmente adquirindo conhecimento e se aprofundando como um desenvolvedor Front-End, ama desenvolver para web usando JavaScript, HTML5 e CSS3.
             </P>
         </section>
-        <img class="img_mikael" src="Mikael.jpg" alt="Foto do Mikael Ferreira">
+        <img class="img_mikael" src="img/Mikael-2.jpeg" alt="Foto do Mikael Ferreira">
    </main>
     <footer class="rodape"> 
         <P> Desenvolvido por Mikael Ferreira</P>
