Atualizando a descrição no about

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
    <main class="apresentacao">
         <section class="apresentacao_conteudo">
             <h1 class="apresentacao_titulo">Sobre mim</h1>
-            <P class="apresentacao_texto">Apaixonado por tecnologia desde pequeno. Cursando Analise de Desenvolvimento de sistemas, atualmente trabalha como analista de TI no Rio de Janeiro, aonde mora com a sua família.
+            <P class="apresentacao_texto">Apaixonado por tecnologia desde pequeno. Cursando Análise de Desenvolvimento de sistemas, atualmente à procura de uma oportunidade para aprimorar suas habilidades e adquirir mais experiência e conhecimento.
             </P>
             <P class="apresentacao_texto">Experiência com suporte técnico ao cliente, manutenção e consertos de equipamentos eletrônicos como notebooks e desktops, de diferentes sistemas (Windows e MAC).  
             </P>
