--- a/about.html
+++ b/about.html
@@ -19,9 +19,15 @@
             <h1 class="apresentacao_titulo">Sobre mim</h1>
             <P class="apresentacao_texto">Apaixonado por tecnologia desde pequeno. Cursando Análise de Desenvolvimento de sistemas, atualmente à procura de uma oportunidade para aprimorar suas habilidades e adquirir mais experiência e conhecimento.
             </P>
-            <P class="apresentacao_texto">Profissional dedicado à resolução de problemas, correções de erros e investigações em programas, com expertise destacada em SQL. Além disso, possuo experiência com suporte técnico ao cliente, manutenção e consertos de equipamentos eletrônicos como notebooks e desktops, de diferentes sistemas (Windows e MAC).
+            <P class="apresentacao_texto">Profissional dedicado à resolução de problemas com correções de erros, investigações em programas e desenvolvimento web com habilidades destacadas em SQL, JavaScript e outras tecnologias voltadas para o desenvolvimento web. Além disso, possui experiência com suporte técnico ao cliente, manutenção e consertos de equipamentos eletrônicos como notebooks e desktops, de diferentes sistemas (Windows e MAC).
             </P>
-            <P class="apresentacao_texto">É um grande fã do mundo open-source, desde então, migrando para área de programação. Atualmente adquirindo conhecimento e se aprofundando como um desenvolvedor Front-End, ama desenvolver para web usando JavaScript, HTML5 e CSS3.
+            <P class="apresentacao_texto"> Conhecimento e experiências com as Tecnologias: 
+                • HTM
+                • CSS
+                • JAVA SCRIPT
+                • PL/SQL(Oracle)
+                • MYSQL
+                • Git e Github
             </P>
         </section>
         <img class="img_mikael" src="img/Mikael-2.jpeg" alt="Foto do Mikael Ferreira">
