--- a/about.html
+++ b/about.html
@@ -21,13 +21,7 @@
             </P>
             <P class="apresentacao_texto">Profissional dedicado à resolução de problemas com correções de erros, investigações em programas e desenvolvimento web com habilidades destacadas em SQL, JavaScript e outras tecnologias voltadas para o desenvolvimento web. Além disso, possui experiência com suporte técnico ao cliente, manutenção e consertos de equipamentos eletrônicos como notebooks e desktops, de diferentes sistemas (Windows e MAC).
             </P>
-            <P class="apresentacao_texto"> Conhecimento e experiências com as Tecnologias: 
-                • HTM
-                • CSS
-                • JAVA SCRIPT
-                • PL/SQL(Oracle)
-                • MYSQL
-                • Git e Github
+            <P class="apresentacao_texto"> Conhecimento e experiências com as Tecnologias: HTMl, CSS, JavaScript, PLSQL(Oracle), MySQL e Git/GitHub
             </P>
         </section>
         <img class="img_mikael" src="img/Mikael-2.jpeg" alt="Foto do Mikael Ferreira">
