--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <h1 class="apresentacao_titulo">Sobre mim</h1>
             <P class="apresentacao_texto">Apaixonado por tecnologia desde pequeno. Cursando Análise de Desenvolvimento de sistemas, atualmente à procura de uma oportunidade para aprimorar suas habilidades e adquirir mais experiência e conhecimento.
             </P>
-            <P class="apresentacao_texto">Profissional dedicado à resolução de problemas com correções de erros, investigações em programas e desenvolvimento web com habilidades destacadas em SQL, JavaScript e outras tecnologias voltadas para o desenvolvimento web. Além disso, possui experiência com suporte técnico ao cliente, manutenção e consertos de equipamentos eletrônicos como notebooks e desktops, de diferentes sistemas (Windows e MAC).
+            <P class="apresentacao_texto">Profissional versátil com sólidas habilidades em bancos de dados SQL e desenvolvimento web. Minha expertise em SQL me permite criar consultas eficientes e otimizadas para acessar e manipular dados de forma precisa e rápida. Além disso, domino as linguagens da web, como HTML, CSS e JavaScript, permitindo-me desenvolver interfaces intuitivas e responsivas, proporcionando uma experiência agradável ao usuário.
             </P>
             <P class="apresentacao_texto"> Conhecimento e experiências com as Tecnologias: HTMl, CSS, JavaScript, PLSQL(Oracle), MySQL e Git/GitHub
             </P>
