--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="apresentacao"> <!-- Conteúdo principal da página -->
         <section class="apresentacao_conteudo"> <!--tag para separar e agrupar um grupo de elementos na página-->
             <h1 class="apresentacao_titulo">Eleve seu negócio digital a outro nível<strong class="titulo-destaque"> com uma aplicação de qualidade!</strong></h1>
-            <P class="apresentacao_texto">Olá! Sou Mikael Ferreira, desenvolvedor de Sofware com especialidade em JavaScript e SQL. Ajudo pequenos negócios a colocarem em prática boas ideias. Vamos conversar?</P>
+            <P class="apresentacao_texto">Olá! Sou Mikael Ferreira, desenvolvedor de Software com especialidade em JavaScript e SQL. Ajudo pequenos negócios a colocarem em prática boas ideias. Vamos conversar?</P>
             <div class="apresentacao_links"> <!-- tag para ser usado para agrupar elementos para fins de estilos (class ou id)-->
                 <h2 class="apresentacao_subtitulo"> Acesse minhas redes: </h2>
                 <a  class="apresentacao_button" href="https://www.linkedin.com/in/mikael-ferreira-37471b232/"> 
