--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
             <h1 class="apresentacao_titulo">Sobre mim</h1>
             <P class="apresentacao_texto">Apaixonado por tecnologia desde pequeno. Cursando Análise de Desenvolvimento de sistemas, atualmente à procura de uma oportunidade para aprimorar suas habilidades e adquirir mais experiência e conhecimento.
             </P>
-            <P class="apresentacao_texto">Profissional versátil com sólidas habilidades em bancos de dados SQL e Infraestrutura de TI. Minhas competências em SQL me permitem criar consultas eficientes e otimizadas, acessando e manipulando dados de forma precisa e rápida. Além disso, possuo experiência na manutenção de equipamentos com diferentes sistemas operacionais, incluindo Windows e macOS.
+            <P class="apresentacao_texto">Profissional versátil com sólidas habilidades em bancos de dados SQL, JavaScript e infraestrutura de TI. Minhas competências em SQL me permitem criar consultas eficientes e otimizadas, acessando e manipulando dados de forma precisa e rápida. Além disso, tenho conhecimento em Node.js e possuo experiência na manutenção de equipamentos com diferentes sistemas operacionais, incluindo Windows e macOS.
             </P>
-            <P class="apresentacao_texto"> Conhecimento e experiências com as Tecnologias: JavaScript, PLSQL(Oracle), MySQL e Git/GitHub
+            <P class="apresentacao_texto"> Conhecimento e experiências com as Tecnologias: JavaScript, Node.JS, PLSQL(Oracle), MySQL e Git/GitHub
             </P>
         </section>
         <img class="img_mikael" src="img/Mikael-2.jpeg" alt="Foto do Mikael Ferreira">
