--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
             <h1 class="apresentacao_titulo">Sobre mim</h1>
             <P class="apresentacao_texto">Apaixonado por tecnologia desde pequeno. Cursando Análise de Desenvolvimento de sistemas, atualmente à procura de uma oportunidade para aprimorar suas habilidades e adquirir mais experiência e conhecimento.
             </P>
-            <P class="apresentacao_texto">Profissional versátil com sólidas habilidades em bancos de dados SQL e infraestrutura de TI. Minhas competências em SQL me permitem criar consultas eficientes e otimizadas, acessando e manipulando dados de forma precisa e rápida.
+            <P class="apresentacao_texto">Profissional versátil com habilidades em bancos de dados SQL e Python. Minhas competências em SQL me permitem criar consultas eficientes e otimizadas, acessando e manipulando dados de forma precisa e rápida. Em Python, desenvolvo scripts automatizados, realizo análise de dados e crio soluções que melhoram a eficiência operacional.
             </P>
-            <P class="apresentacao_texto">Conhecimento e experiências com as Tecnologias: JavaScript, Python , PLSQL, MySQL e Git/GitHub
+            <P class="apresentacao_texto">Conhecimento em outras tecnologias, como: JavaScript, PLSQL, MySQL e Git/GitHub.
             </P>
         </section>
         <img class="img_mikael" src="img/Mikael-2.jpeg" alt="Foto do Mikael Ferreira">
