Atualizando o sobre mim

--- a/about.html
+++ b/about.html
@@ -17,11 +17,16 @@
    <main class="apresentacao">
         <section class="apresentacao_conteudo">
             <h1 class="apresentacao_titulo">Sobre mim</h1>
-            <P class="apresentacao_texto">Apaixonado por tecnologia desde pequeno. Cursando Análise de Desenvolvimento de sistemas, atualmente à procura de uma oportunidade para aprimorar suas habilidades e adquirir mais experiência e conhecimento.
+            <P class="apresentacao_texto"> Olá! Meu nome é Mikael, tenho 24 anos e sou apaixonado por tecnologia. Formado em Análise e Desenvolvimento de sistemas, atualmente estou à procura de uma oportunidade para aprimorar minhas habilidades e adquirir mais experiência e conhecimento.</P>
+            <P class="apresentacao_texto">Sou um desenvolvedor de software com um forte foco no desenvolvimento backend. Através da minha experiência na área, adquiri um profundo conhecimento dos princípios e práticas de desenvolvimento de software.
             </P>
-            <P class="apresentacao_texto">Profissional versátil com habilidades em bancos de dados SQL e Python. Minhas competências em SQL me permitem criar consultas eficientes e otimizadas, acessando e manipulando dados de forma precisa e rápida. Em Python, desenvolvo scripts automatizados, realizo análise de dados e crio soluções que melhoram a eficiência operacional.
+            <P class="apresentacao_texto">Minha principal especialização está em aplicações com SQL e Python, nas quais utilizo meu conhecimento para criar aplicações em backend, APIs eficientes e diversos outros tipos de soluções de software dentro de ambientes Windows. 
             </P>
-            <P class="apresentacao_texto">Conhecimento em outras tecnologias, como: JavaScript, PLSQL, MySQL e Git/GitHub.
+            <P class="apresentacao_texto">Conhecimento e experiências com outras tecnologias: 
+                <p class="apresentacao_texto">• JavaScript</p>
+                <p class="apresentacao_texto">• PL/SQLt</p>
+                <p class="apresentacao_texto">• MySQL</p>
+                <p class="apresentacao_texto">• Git e Github</p>
             </P>
         </section>
         <img class="img_mikael" src="img/Mikael-2.jpeg" alt="Foto do Mikael Ferreira">
