Atualizando sobre mim

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             </P>
             <P class="apresentacao_texto">Conhecimento e experiências com outras tecnologias: 
                 <p class="apresentacao_texto">• JavaScript</p>
-                <p class="apresentacao_texto">• PL/SQLt</p>
+                <p class="apresentacao_texto">• PL/SQL</p>
                 <p class="apresentacao_texto">• MySQL</p>
                 <p class="apresentacao_texto">• Git e Github</p>
             </P>
