Atualização da apresentação

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <P class="apresentacao_texto"> Olá! Meu nome é Mikael, tenho 24 anos e sou apaixonado por tecnologia. Formado em Análise e Desenvolvimento de sistemas, atualmente estou à procura de uma oportunidade para aprimorar minhas habilidades e adquirir mais experiência e conhecimento.</P>
             <P class="apresentacao_texto">Sou um desenvolvedor de software com um forte foco no desenvolvimento backend. Através da minha experiência na área, adquiri um profundo conhecimento dos princípios e práticas de desenvolvimento de software.
             </P>
-            <P class="apresentacao_texto">Minha principal especialização está em aplicações com SQL e Python, nas quais utilizo meu conhecimento para criar aplicações em backend, APIs eficientes e diversos outros tipos de soluções de software dentro de ambientes Windows. 
+            <P class="apresentacao_texto">Minhas principais habilidades está em aplicações com SQL e Python, nas quais utilizo meu conhecimento para criar aplicações em backend, APIs eficientes e diversos outros tipos de soluções de software dentro de ambientes Windows. 
             </P>
             <P class="apresentacao_texto">Conhecimento e experiências com outras tecnologias: 
                 <p class="apresentacao_texto">• JavaScript</p>
