--- a/about.html
+++ b/about.html
@@ -17,12 +17,11 @@
    <main class="apresentacao">
         <section class="apresentacao_conteudo">
             <h1 class="apresentacao_titulo">Sobre mim</h1>
-            <P class="apresentacao_texto"> Olá! Meu nome é Mikael, tenho 24 anos e sou apaixonado por tecnologia. Formado em Análise e Desenvolvimento de sistemas, atualmente estou à procura de uma oportunidade para aprimorar minhas habilidades e adquirir mais experiência e conhecimento.</P>
-            <P class="apresentacao_texto">Sou um desenvolvedor de software com um forte foco no desenvolvimento backend. Através da minha experiência na área, adquiri um profundo conhecimento dos princípios e práticas de desenvolvimento de software.
-            </P>
+            <P class="apresentacao_texto"> Olá! Meu nome é Mikael, tenho 25 anos e sou apaixonado por tecnologia. Formado em Análise e Desenvolvimento de sistemas, atualmente atuo como analista de suporte na Trade Marketing Force.</P>
             <P class="apresentacao_texto">Minhas principais habilidades está em aplicações com SQL e Python, nas quais utilizo meu conhecimento para criar aplicações em backend, APIs eficientes e diversos outros tipos de soluções de software dentro de ambientes Windows e Linux. 
             </P>
             <P class="apresentacao_texto">Conhecimento e experiências com outras tecnologias: 
+                <p class="apresentacao_texto">• Python</p>
                 <p class="apresentacao_texto">• JavaScript</p>
                 <p class="apresentacao_texto">• PL/SQL</p>
                 <p class="apresentacao_texto">• MySQL</p>
